--- a/templates/cal/calendar.html
+++ b/templates/cal/calendar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Calendário{% endblock %}
+{% block title %}Carteira{% endblock %}
 
 {% block content %}
 <div class="calendar-container">
