--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="{% url 'cal:calendar' %}">Calendário</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:transacao_nova' %}">Nova compra</a>
+                        <a class="nav-link" href="{% url 'cal:transacao_nova' %}">Registrar movimentação</a>
                     </li>
                     
                     
