--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <link href="{% static 'css/simple-sidebar.css' %}" rel="stylesheet">
     <link href="{% static 'css/fontawesome.min.css' %}" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'img/dever.png' %}" type="image/png">
@@ -38,6 +41,38 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block scripts %}{% endblock %}
+   
+    {% block scripts %}
+    
+   
+    
+    {% endblock %}
+    
+    <script>
+        // Função para ativar/desativar o modo escuro
+        function toggleDarkMode() {
+          document.body.classList.toggle('dark-mode');
+      
+          // Salvar preferência no localStorage
+          if (document.body.classList.contains('dark-mode')) {
+            localStorage.setItem('darkMode', 'enabled');
+            document.getElementById('toggleDarkMode').textContent = '☀️ Modo Claro';
+          } else {
+            localStorage.setItem('darkMode', 'disabled');
+            document.getElementById('toggleDarkMode').textContent = '🌙 Modo Escuro';
+          }
+        }
+      
+        // Evento do botão
+        document.getElementById('toggleDarkMode').addEventListener('click', toggleDarkMode);
+      
+        // Verificar preferência salva ao carregar a página
+        window.onload = () => {
+          if (localStorage.getItem('darkMode') === 'enabled') {
+            document.body.classList.add('dark-mode');
+            document.getElementById('toggleDarkMode').textContent = '☀️ Modo Claro';
+          }
+        };
+      </script>
 </body>
 </html>
