--- a/templates/cal/transacao_form.html
+++ b/templates/cal/transacao_form.html
@@ -6,7 +6,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Salvar</button>
-    <a href="{% url 'cal:listar_transacoes' %}" class="btn btn-danger">Cancelar</a>
+    <a href="{% url 'cal:calendar' %}" class="btn btn-danger">Cancelar</a>
   </form>
-  
 {% endblock %}
