--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <!-- Logo/Brand -->
-        <a class="navbar-brand" href="{% url 'cal:calendar' %}"><i class="bi bi-house-fill"></i></a>
-        
+        <a class="navbar-brand" href="{% url 'cal:calendar' %}"><i class="bi bi-house-fill"></i>  </a>
+        <!-- R$ {{ saldo_total|floatformat:2 }} -->
         <!-- Botão Toggler para Offcanvas -->
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -14,6 +14,7 @@
                 <h5 class="offcanvas-title">Menu</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
+            
             <div class="offcanvas-body">
                 <ul class="navbar-nav me-auto">
                     {% if user.is_authenticated %}
