--- a/templates/cal/transacoes_mes.html
+++ b/templates/cal/transacoes_mes.html
@@ -37,8 +37,6 @@
   </div>
 </div>
 
-
-
 <!-- Navegação de meses -->
 <!-- Navegação de meses -->
 <div class="d-flex justify-content-between flex-wrap mb-3 gap-2">
@@ -109,7 +107,7 @@
       <tr class="table-secondary">
         <td colspan="2"><strong>Total:</strong></td>
         <td colspan="2">
-          <strong>R$ {{ total|floatformat:2|localize }}</strong>
+          <strong>R$ {{ saldo_total|floatformat:2|localize }}</strong>
         </td>
       </tr>
     </tfoot>
