--- a/templates/cal/calendar.html
+++ b/templates/cal/calendar.html
@@ -22,11 +22,11 @@
 </div>
 <!-- Botão Flutuante "Adicionar Transação" -->
 
-<a href="{% url 'cal:transacao_nova' %}" class="btn btn-primary rounded-circle shadow-lg"
+<!-- <a href="{% url 'cal:transacao_nova' %}" class="btn btn-primary rounded-circle shadow-lg"
    style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px;
           display: flex; align-items: center; justify-content: center; font-size: 28px; z-index: 1000;">
   <i class="bi bi-plus-lg"></i>
-</a>
+</a> -->
 
 
 {% endblock %}
