--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <!-- Logo/Brand -->
-        <a class="navbar-brand" href="{% url 'cal:calendar' %}"><i class="bi bi-house-fill"></i>  R$ {{ saldo_total|floatformat:2 }}</a>
-        
+        <a class="navbar-brand" href="{% url 'cal:calendar' %}">
+            {% if user.is_authenticated %}
+            <i class="bi bi-house-fill"></i>  R$ {{ saldo_total|floatformat:2 }}</a>
+            {% endif %}
         <!-- Botão Toggler para Offcanvas -->
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
